--- a/style.css
+++ b/style.css
@@ -359,3 +359,56 @@ button.language:hover {
 .linksBg h2 {
   margin-bottom: 60px;
 }
+
+/* -----------------------------------------------------------------------------projekte 
+*/
+
+.projektContainer {
+  display: grid;
+
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.projekt {
+  margin: 20px;
+  padding-bottom: 0px;
+  position: relative;
+}
+.projekt h3 {
+  padding: 20px;
+  text-align: center;
+
+  border-radius: 40px 40px 0 0;
+  background-color: var(--bg-grey);
+}
+.projekt img {
+  border-radius: 0 0 40px 40px;
+}
+
+.projekt a {
+  width: 100px;
+  height: 40px;
+  margin: 20px;
+
+  background-color: var(--petrol-ultra-transparent);
+  border-radius: 20px;
+  box-shadow: inset 0 0 5px var(--petrol-dark-transparent);
+  backdrop-filter: blur(4px);
+
+  text-align: center;
+  align-content: center;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 600;
+
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+
+  z-index: -1;
+}
+.projekt:hover a {
+  z-index: 10;
+
+  transition: 500ms;
+}
