--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
   --petrol-glow: hsl(182, 100%, 50%);
 
   --gradient1a: hsl(56, 100%, 56%);
-  --gradient1b: hsl(111, 100%, 54%);
+  --gradient1b: hsl(182, 100%, 50%);
+  --gradient1c: hsl(111, 100%, 54%);
 }
 * {
   font-family: "Ubuntu", sans-serif;
@@ -68,8 +69,8 @@ dialog#ha > a {
     linear-gradient(
         45deg,
         var(--gradient1a) 0%,
-        var(--petrol-glow) 50%,
-        var(--gradient1b) 100%
+        var(--gradient1b) 50%,
+        var(--gradient1c) 100%
       )
       border-box;
   border: solid 2px transparent;
@@ -279,9 +280,10 @@ h6 {
 div.languageSelector {
   display: flex;
   direction: row;
-  justify-content: center;
+  justify-content: space-around;
+  position: relative;
 
-  width: calc(100% - 100px);
+  width: calc(100% - 50px);
   padding: 0px;
   margin: 25px;
 
@@ -291,21 +293,33 @@ div.languageSelector {
   background-color: var(--bg-grey);
   box-shadow: inset 0 0 5px black;
 }
+#languageSelectorBg {
+  position: absolute;
+  width: 25%;
+  height: 40px;
+  border-radius: 30px;
+  background-color: var(--petrol-solid);
+
+  transition: 500ms;
+}
 button.language {
   width: auto;
   height: 40px;
   min-width: 50px;
-  flex-grow: 1;
+  width: 25%;
 
-  background-color: var(--petrol-transparent);
+  background-color: var(--invisible);
 
   border: none;
   border-radius: 25px;
 
-  font-size: 15px;
-  font-weight: 400;
+  font-size: 20px;
+  font-weight: 700;
 
-  transition: 500ms;
+  position: relative;
+  z-index: 10;
+
+  transition: 500ms ease-in-out;
 }
 button.language:hover {
   cursor: pointer;
