--- a/style.scss
+++ b/style.scss
@@ -343,15 +343,18 @@ h6 {
     margin: 10px;
     margin-right: 0px;
   }
+  .js {
+    border-radius: 8px;
+  }
   .scratch {
-    transition: ease-out all 60s;
+    transition: ease-out all 600s;
     &:hover {
-      transform: translateY(-3000px);
+      transform: translateY(-30000px);
     }
   }
   .react {
     transform: rotate(var(--angle));
-    animation: 30s linear rotation infinite;
+    animation: 60s linear rotation infinite;
   }
 }
 @media (max-width: 900px) {
@@ -452,5 +455,64 @@ h6 {
         transition: 500ms;
       }
     }
+  }
+}
+
+dialog.newRecord {
+  // height: 200px;
+  // width: 320px;
+  padding: 40px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+
+  &:not([open]) {
+    display: none;
+  }
+
+  background: linear-gradient(0deg, hsl(0, 0%, 10%), hsl(0, 0%, 15%));
+  box-shadow: inset 0 2px 4px hsl(0, 0%, 30%);
+  border-radius: 20px;
+  border: none;
+  &::backdrop {
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(4px);
+  }
+
+  div {
+    min-width: 120px;
+    height: 60px;
+    padding: 10px;
+    margin: auto;
+    margin-top: 20px;
+
+    background: linear-gradient(0deg, hsl(120, 100%, 30%), hsl(120, 100%, 40%));
+    box-shadow: inset 0 2px 4px hsl(120, 100%, 50%);
+    border-radius: 20px;
+
+    h1 {
+      line-height: 60px;
+      font-size: 60px;
+    }
+  }
+  p {
+    padding: 8px;
+    margin-top: 20px;
+    text-align: center;
+    color: red;
+    span {
+      color: red;
+    }
+  }
+  button {
+    height: 40px;
+    width: 200px;
+    margin: auto;
+
+    background: linear-gradient(0deg, hsl(0, 0%, 20%), hsl(0, 0%, 25%));
+    box-shadow: inset 0 1px 2px hsl(0, 0%, 40%);
+    border: none;
+    border-radius: 20px;
   }
 }
