--- a/style.scss
+++ b/style.scss
@@ -413,47 +413,41 @@ h6 {
     padding-bottom: 0px;
     position: relative;
 
+    background: linear-gradient(0deg, hsl(0, 0%, 5%), hsl(0, 0%, 10%));
+    box-shadow: inset 0 1px 1px hsl(0, 0%, 30%);
+    border-radius: 40px;
+
     h3 {
       padding: 20px;
       text-align: center;
-
-      border-radius: 40px 40px 0 0;
-      background-color: $bg-grey;
-
-      background: linear-gradient(0deg, hsl(0, 0%, 5%), hsl(0, 0%, 10%));
-      box-shadow: inset 0 1px 1px hsl(0, 0%, 30%);
     }
-    img {
-      border-radius: 0 0 40px 40px;
+    p {
+      height: 20px;
+      margin: 20px;
+      gap: 8px;
+      span {
+        margin-right: 8px;
+        padding: 8px;
+        background-color: hsl(0, 0%, 15%);
+        border-radius: 8px;
+      }
     }
 
     a {
-      width: 100px;
       height: 40px;
       margin: 20px;
+      padding: 5px;
 
-      background-color: $petrol-ultra-transparent;
+      background-color: $petrol-solid;
       border-radius: 20px;
-      box-shadow: inset 0 0 5px $petrol-dark-transparent;
-      backdrop-filter: blur(4px);
 
-      text-align: center;
-      align-content: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-decoration: none;
+      line-height: 20px;
       font-size: 20px;
       font-weight: 600;
-
-      position: absolute;
-      bottom: 0px;
-      right: 0px;
-
-      z-index: -1;
-    }
-    &:hover {
-      a {
-        z-index: 10;
-        transition: 500ms;
-      }
     }
   }
 }
