--- a/style.scss
+++ b/style.scss
@@ -181,7 +181,8 @@ header {
   }
 }
 .showLinks {
-  height: 180px;
+  // for each link 60px height in this class
+  height: 120px;
   transition: 500ms;
 }
 .banner {
@@ -367,36 +368,6 @@ h6 {
   .technologies {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(4, 80px);
-  }
-}
-/* Linktree sction
-*/
-.linksBg {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  background: linear-gradient($petrol-transparent, rgba(0, 0, 0, 0.7)),
-    url(./img/linksBackground.png) center/cover no-repeat;
-  align-items: center;
-
-  a {
-    width: 200px;
-    height: 40px;
-    margin: 20px;
-
-    background-color: $petrol-ultra-transparent;
-    border-radius: 20px;
-    box-shadow: inset 0 0 5px $petrol-dark-transparent;
-    backdrop-filter: blur(4px);
-
-    text-align: center;
-    align-content: center;
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 600;
-  }
-  h2 {
-    margin-bottom: 60px;
   }
 }
 
