--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ header {
   position: absolute;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   border-radius: 30px;
   transition: 500ms;
 }
@@ -76,6 +77,7 @@ header {
   position: fixed;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   top: 0px;
   left: 0px;
   z-index: 10;
@@ -112,7 +114,7 @@ header {
   width: calc(100% - 0px);
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: start;
 }
 .linkContainer .navbarLink {
   height: 60px !important;
@@ -131,6 +133,31 @@ header {
   scale: 1.05;
 }
 
+.languageSelector {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  right: 0px;
+}
+.languageSelector button {
+  height: 42.5px;
+  width: 42.5px;
+  margin: 7.5px 10px 7.5px 0px;
+  position: relative;
+  overflow: hidden;
+  background-color: hsla(0, 0%, 0%, 0);
+  border: none;
+  border-radius: 50%;
+  border: white solid 2.5px;
+}
+.languageSelector button img {
+  border-radius: 21.25px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @media (max-width: 600px) {
   .linkContainer {
     width: calc(100% - 180px);
@@ -143,13 +170,17 @@ header {
   .navbarButton {
     visibility: visible;
     display: block;
+    padding-right: 20px;
+  }
+  .languageSelector {
+    padding-left: 20px;
+    position: relative;
+  }
+  .showLinks {
+    height: 240px;
+    transition: 500ms;
   }
 }
-.showLinks {
-  height: 180px;
-  transition: 500ms;
-}
-
 .banner {
   display: flex;
   flex-direction: column;
@@ -195,6 +226,12 @@ header {
 .banner .links .bannerLink:hover {
   background-color: hsl(0, 0%, 95%);
   color: hsl(0, 0%, 15%);
+}
+.banner .links .bannerLink:hover span {
+  color: hsl(0, 0%, 15%);
+}
+.banner .links .bannerLink span {
+  transition: 1000ms;
 }
 
 @property --angle {
@@ -254,6 +291,7 @@ h6 {
   border-radius: 25px;
   background: linear-gradient(0deg, hsl(0, 0%, 5%), hsl(0, 0%, 10%));
   box-shadow: inset 0 1px 2px hsl(0, 0%, 30%);
+  text-wrap: balance;
   font-size: larger;
   overflow: hidden;
 }
