--- a/style.css
+++ b/style.css
@@ -181,6 +181,11 @@ header {
     transition: 500ms;
   }
 }
+.bannerGrid {
+  display: grid;
+  grid-template-columns: 1fr, 1fr;
+}
+
 .banner {
   display: flex;
   flex-direction: column;
@@ -189,10 +194,11 @@ header {
   text-align: center;
   justify-content: space-evenly;
   position: relative;
-  top: calc(50vh - 90px);
-  left: calc(50% - 150px);
-  height: 180px;
-  width: 300px;
+  top: 50vh;
+  left: 50%;
+  transform: translateY(-50%);
+  height: 400px;
+  width: 40vw;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   background-color: hsla(182, 63%, 54%, 0.2);
@@ -281,6 +287,10 @@ h4,
 h5,
 h6 {
   text-align: center;
+}
+
+.highlightText {
+  color: hsl(56, 100%, 56%);
 }
 
 .infotext {
