add react project

--- a/style.scss
+++ b/style.scss
@@ -87,7 +87,7 @@ dialog#ha {
 header {
   min-height: 100vh;
   background: linear-gradient($petrol-transparent, rgba(0, 0, 0, 0.7)),
-    url(./img/headerBackground.png) center/cover no-repeat;
+    url(./img/headerBackground.webp) center/cover no-repeat;
 }
 
 /*header link liste*/
