--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ dialog#ha a {
 /*header bild*/
 header {
   min-height: 100vh;
-  background: linear-gradient(hsla(180, 80%, 50%, 0.5), rgba(0, 0, 0, 0.7)), url(./img/headerBackground.png) center/cover no-repeat;
+  background: linear-gradient(hsla(180, 80%, 50%, 0.5), rgba(0, 0, 0, 0.7)), url(./img/headerBackground.webp) center/cover no-repeat;
 }
 
 /*header link liste*/
